Make OAuth2 in the server side instead of client side.
