# action_server/src/sema4ai/action_server/_robo_utils/log_formatter.py
@@ -56,9 +56,14 @@ class UvicornAccessDisableOAuth2LogFilter(Filter):
     def filter(self, record):
         if record.name == "uvicorn.access":
             # Hide logging for /oauth2 redirect urls.
-            if len(record.args) == 5 and record.args[2].startswith("/oauth2/redirect"):
-                args = list(record.args)
-                args[2] = "/oauth2/redirect?..."
-                record.args = tuple(args)
+            if len(record.args) == 5:
+                if record.args[2].startswith("/oauth2/redirect"):
+                    args = list(record.args)
+                    args[2] = "/oauth2/redirect?..."
+                    record.args = tuple(args)
+                elif record.args[2].startswith("/oauth2/login"):
+                    args = list(record.args)
+                    args[2] = "/oauth2/login?..."
+                    record.args = tuple(args)
                 return True
         return True
